--- a/study_0919/class01/newapp/templates/home.html
+++ b/study_0919/class01/newapp/templates/home.html
@@ -4,7 +4,13 @@
     
     </head>
     <body>
-        <p>hello</p>
+        <p>{{message}}</p>
+        <h1> NEW MODEL </h1>
+        <ul>
+            {% for model in models %}
+                <li>{{model.name}} : {{model.skill}}</li>
+            {% endfor %}
+        </ul>
     </body>
 
 </html>
