--- a/study_0922/class01/weather/templates/weather/detail.html
+++ b/study_0922/class01/weather/templates/weather/detail.html
@@ -3,35 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>도시 상세 정보</title>        
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7O4Qj84BjkbIdvqcNfKLMV6vLLINzTbY" async></script>
+        <title>도시 상세 정보</title>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7O4Qj84BjkbIdvqcNfKLMV6vLLINzTbY"></script>
+
         <style>
             #map {
-                height : 600px;
-                width : 600px;
+                height: 600px;
+                width: 600px;
             }
         </style>
     </head>
-
     <body>
         <h1>{{weather.city}} 상세 정보</h1>
         <p>온도 : {{weather.temperature}}</p>
-        <p>날씨 : {{weather.dexcription}}</p>
+        <p>날씨 : {{weather.description}}</p>
         <p>위도 : {{weather.lat}}</p>
         <p>경도 : {{weather.lon}}</p>
 
         <div id="map"></div>
-        
-        <script type="text/javescript">
-        window.initMap = functioin() {
+
+        <script type="text/javascript">
+        window.initMap = function() {
             var lat = {{weather.lat}};
             var lon = {{weather.lon}};
 
-            var map = new google.maps.Map(document.gerElementByID('map'), {
-                center: {lat:lat, lon:lon},
-                zoom : 8
-            })
+            var map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: lat, lng: lon},
+                zoom : 12
+            });
         }
+
         initMap();
         </script>
     </body>
