--- a/study_0922/class01/weather/templates/weather/index.html
+++ b/study_0922/class01/weather/templates/weather/index.html
@@ -6,6 +6,7 @@
         <title>오늘의 날씨</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css"/>
     </head>
+
     <body>
         <section class="hero is-primary">
             <div class="hero-body">
@@ -18,7 +19,7 @@
             <div class="container">
                 <div class="columns">
                     <div class="column is-offset-4 is-4">
-                        <form method="POST">
+                        <form method="post">
                             {% csrf_token %}
                             <div class="field has-addons">
                                 <div class="control is-expanded">
@@ -26,7 +27,7 @@
                                 </div>
                                 <div class="control">
                                     <button class="button is-info">
-                                        추가하기
+                                    추가하기
                                     </button>
                                 </div>
                             </div>
@@ -40,25 +41,25 @@
                 <div class="columns">
                     <div class="column is-offset-4 is-4">
                         {% for weather in weather_data %}
-                        <div class="box">
-                            <a href="{% url 'weather:detail' weather.id %}">
-                                <article class="media">
-                                    <div class="media-left">
-                                        <figure class="image is-50x50">
-                                            <img src="http://openweathermap.org/img/w/{{weather.icon}}.png" alt="image">
-                                        </figure>
-                                    </div>
-                                    <div class="media-content">
-                                        <p>
-                                            <span class="title">{{weather.city}}</span>
-                                            <br>
-                                            <span class="subtitle">{{weather.temperature}}°C</span>
-                                            <br> {{weather.description}}
-                                        </p>
-                                    </div>
-                                </article>
-                            </a>
-                        </div>
+                            <div class="box">
+                                <a href="{% url 'detail' weather.id %}">
+                                    <article class="media">
+                                        <div class="media-left">
+                                            <figurt class="image is-50x50">
+                                                <img src="http://openweathermap.org/img/w/{{weather.icon}}.png" alt="image">
+                                            </figurt>
+                                        </div>
+                                        <div class="media-content">
+                                            <p>
+                                                <span class="title">{{weather.city}}</span>
+                                                <br>
+                                                <span class="subtitle">{{weather.temperature}}°C</span>
+                                                <br> {{weather.description}}
+                                            </p>
+                                        </div>
+                                    </article>
+                                </a>
+                            </div>
                         {% endfor %}
                     </div>
                 </div>
