--- a/study_0925/class06/book/templates/book/book_detail.html
+++ b/study_0925/class06/book/templates/book/book_detail.html
@@ -2,24 +2,27 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>책 상세 정보</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Book Detail</title>
 
-    <body>
-        <div class="container mt-5">
-            <h1>상세정보</h1>
-            <div class="mt-3">
-                <h2>{{object.title}}</h2>
-                <p><strong>저자 : </strong>{{object.author}}</p>
-                <p><strong>출판일 : </strong>{{object.pub_date}}</p>
-                <hr>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+</head>
+<body>
+<div class="container mt-5">
+    <h1>상세 정보</h1>
+	<div class='mt-3'>
+		<h2>{{ object.title }}</h2>
+		<p><strong>저자 :</strong> {{ object.author }}</p>
+        <p><strong>출판일 :</strong> {{ object.pub_date }}</p>
+        <img src="{{cover_url}}" alt="{{object.title}}">
 
-                <a href="{% url 'book-update' object.pk %}" class="btn btn-primary">수정</a>
-                <a href="{% url 'book-delete' object.pk %}" class="btn btn-danger">삭제</a>
-            </div>
+        <hr>
+
+        <a href="{% url 'book-update' object.pk %}" class='btn btn-primary'>수정</a>
+        <a href="{% url 'book-delete' object.pk %}" class='btn btn-danger'>삭제</a>
         </div>
-    </body>
+  </div>
+
+</body>
 </html>
