--- a/study_0925/class06/book/templates/book/book_form.html
+++ b/study_0925/class06/book/templates/book/book_form.html
@@ -4,14 +4,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>책 등록</title>
+        <title>새로운 책</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     </head>
 
     <body>
         <div class="container mt-5">
             <h1>새로운 책 추가</h1>
-            <!-- post를 쓰면 보안을 신경써라!!! -->
             <form method="post">
                 {% csrf_token %}
                 {{form.as_p}}
